2006-11-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\dopdfimage): look for png, jpg/jpeg/JPG, and
	  as well as pdf images, since they are supported in pdftex with
	  no further ado.
	* doc/texinfo.txi (Image Syntax): document it.

2006-11-05  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (Image Syntax): don't mention GIF any more.

2006-11-01  Miloslav Trmac  <mitr@redhat.com>

	* util/texindex.c (main): Remove off-line sort implementation.
	(tempdir, tempbase, tempcount, last_deleted_tempcount)
	keep_tempfiles): Remove variables.
	(sort_offline, initbuffer, readline, merge_files, merge_direct)
	(gettempname, maketempname, flush_tempfiles):
	Remove functions.
	(texindex_options): Remove --keep and --no-keep documentation.
	(decode_command): Ignore --keep.
	(writelines): Fix comment.

2006-10-24  Karl Berry  <karl@gnu.org>  (tiny change)

	* util/texindex.c (readline): do the reallocation (more) correctly.
	From Miloslav Trmac.

2006-10-10  Karl Berry  <karl@gnu.org>

	* TODO: would be nice if accent commands implicitly used
	dotless i/j.

2006-10-09  Miloslav Trmac  <mitr@redhat.com>  (tiny change)

	* util/texindex.c (gettempname): new fn, split off from maketempname.
        (maketempname): call it.  We weren't deleting temp files.
        (sort_offline): check result from maketempname.

2006-10-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* makeinfo/tests/quote-args: Add missing $srcdir.

2006-10-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\singlequotechar): rename to \codequoteright.
	(\quoteexpand): rename to \rquoteexpand.
	(\codequoteleft): new def, to look for @set codequotebacktick.
	(\lquoteexpand, \quoteexpand): new defs.
	(\lquoteChar, \rquoteChar, \dashChar, \underChar: new \chardef's.
	(\code): must use new \...Char values, since now ` is active.

2006-10-01  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_bibtex): also run bibtex if "no .aux file" in
	the .log, and "\bibdata" in the aux, for the first run of a btxmac